correct args in docs

--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -61,9 +61,9 @@ clp <- plot_forest(data = data,
                    statistic = "median",
                    CI = 0.95,
                    stat = stat,
-                   group = GROUP,
+                   covariate = GROUP,
+                   cov_level = LVL,
                    metagroup = param,
-                   study_labels = LVL,
                    vline_intercept = 1,
                    annotate_CI = TRUE) 
 ```
@@ -109,9 +109,9 @@ clp <- plot_forest(data = data_cl,
                    statistic = "median",
                    CI=0.95,
                    stat = stat,
-                   group = GROUP,
+                   covariate = GROUP,
+                   cov_level = LVL,
                    metagroup = param,
-                   study_labels = LVL,
                    text_size = 3.5,
                    vline_intercept = 1)
 ```
@@ -128,9 +128,9 @@ clp <- plot_forest(data = data_cl,
                    statistic = "median",
                    CI=0.95,
                    stat = stat,
-                   group = GROUP,
+                   covariate = GROUP,
+                   cov_level = LVL,
                    metagroup = param,
-                   study_labels = LVL,
                    text_size = 3.5,
                    vline_intercept = 1,
                    
@@ -224,9 +224,9 @@ clp <- plot_forest(data = data_cl,
                    statistic = "median",
                    CI=0.95,
                    stat = stat,
-                   group = GROUP,
+                   covariate = GROUP,
+                   cov_level = LVL,
                    metagroup = param,
-                   study_labels = LVL,
                    summary_label = plot_labels,
                    text_size = 3.5,
                    vline_intercept = 1,
@@ -260,9 +260,9 @@ clp <- plot_forest(data = data,
                    statistic = "median",
                    CI=0.95,
                    stat = stat,
-                   group = GROUP,
+                   covariate = GROUP,
+                   cov_level = LVL,
                    metagroup = param,
-                   study_labels = LVL,
                    shaded_interval = c(0.8,1.25),
                    summary_label = plot_labels,
                    text_size = 3.5,
