--- a/vignettes/multiple-simulations.Rmd
+++ b/vignettes/multiple-simulations.Rmd
@@ -41,9 +41,9 @@ plot_forest(data = data_new ,
             statistic = "median",
             CI=0.95,
             stat = stat,
-            group = GROUP,
+            covariate = GROUP,
+            cov_level = LVL,
             nsim = nsim,
-            study_labels = LVL,
             shaded_interval = c(0.8,1.25),
             summary_label = plot_labels,
             text_size = 3.5,
@@ -59,4 +59,29 @@ plot_forest(data = data_new ,
 ![](assets/forestPlot-nsim.png)<!-- -->
 
 
-In cases where the additional confidence intervals overlap, you can vertically jitter them via the `jitter_nsim` argument (logical).
+In cases where the additional confidence intervals overlap, you can vertically jitter them via the `jitter_nsim` argument (logical). An example can be seen below (note that the data is different than above):
+
+```
+plot_forest(data = plotData,
+            statistic = "mean",
+            CI=0.95,
+            stat = stat,
+            covariate = GROUP,
+            cov_level = LVL,
+            metagroup = param,
+            nsim = nsim,
+            shaded_interval = c(0.8,1.25),
+            summary_label = plot_labels,
+            text_size = 4,
+            vline_intercept = 1,
+            x_lab = "Fraction and 95% CI \nRelative to Reference",
+            CI_label = "Median [95% CI]",
+            plot_width = 8, # out of 12
+            x_breaks = c(0.4,0.6, 0.8, 1, 1.2, 1.4,1.6),
+            x_limit = c(0.4,1.45),
+            annotate_CI=T,
+            nrow = 1,
+            jitter_nsim = TRUE)
+```
+
+![](assets/forestPlot-nsim-jitter.png)<!-- -->
